--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,10 @@
       name="description"
       content="Used as a boilerplate for tasks in the 'HTML, CSS and SASS' course in boom.dev"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body>
@@ -77,6 +81,19 @@
               <div class="media-content">
                 <p class="title is-4">iO Series 7</p>
                 <p class="subtitle is-6 price hot">$0,50</p>
+                <div>
+                  Icons made by
+                  <a
+                    href="https://www.flaticon.com/authors/vectors-market"
+                    title="Vectors Market"
+                    >Vectors Market</a
+                  >
+                  from
+                  <a href="https://www.flaticon.com/" title="Flaticon"
+                    >www.flaticon.com</a
+                  >
+                  <img src="./images/flame.png" alt="flame">
+                </div>
               </div>
             </div>
 
