--- a/src/index.html
+++ b/src/index.html
@@ -80,7 +80,9 @@
               </div>
               <div class="media-content">
                 <p class="title is-4">iO Series 7</p>
-                <p class="subtitle is-6 price hot">$0,50</p>
+                <p class="subtitle is-6 price hot">$0,50
+                  <img src="./images/flame.png" alt="flame">
+                </p>
                 <div>
                   Icons made by
                   <a
@@ -92,7 +94,7 @@
                   <a href="https://www.flaticon.com/" title="Flaticon"
                     >www.flaticon.com</a
                   >
-                  <img src="./images/flame.png" alt="flame">
+                  
                 </div>
               </div>
             </div>
