--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,7 @@
       name="description"
       content="Used as a boilerplate for tasks in the 'HTML, CSS and SASS' course in boom.dev"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
+    <script src="https://kit.fontawesome.com/2a304b98cf.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body>
@@ -81,8 +78,7 @@
               <div class="media-content">
                 <p class="title is-4">iO Series 7</p>
                 <p class="subtitle is-6 price hot">$0,50
-                  <img src="./images/flame.png" alt="flame">
-                </p>
+                  <i class="fas fa-fire-alt"></i>
                 <div>
                   Icons made by
                   <a
