--- a/src/index.html
+++ b/src/index.html
@@ -77,8 +77,7 @@
               </div>
               <div class="media-content">
                 <p class="title is-4">iO Series 7</p>
-                <p class="subtitle is-6 price hot"><i class="fas fa-flame"></i>
-                  $0,50
+                <p class="subtitle is-6 price hot">🔥$0,50
                 <div>
                   Icons made by
                   <a
